Add Close button to popup

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -506,6 +506,10 @@ $(function(){
 		updateLanguage($(this).data("language"));
 	});
 
+	$("body").on("click",".popUpClose",function() {
+		$(".tooltipstered").tooltipster("hide");
+	});
+	
 	$('body').on("click",".deletePrivateApp",function() {
 		if ( popupVisible(this) ) return;
 		var path = $(this).data("path");
