--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -1008,6 +1008,7 @@ function showModeration(script,title) {
 }
 
 function previousApps(installed,dontClear=false,filter="") {
+	checkSortOrder();
 	clearCategory();
 	setPageOne();
 	data.docker = "";
@@ -1204,6 +1205,7 @@ function clearCategory() {
 }
 
 function pinnedApps() {
+	checkSortOrder();
 	setPageOne();
 	data.docker = "";
 	clearSearchBox();
