--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
@@ -64,6 +64,14 @@ function tr($string,$ret=false) {
 
 > <?tr("This option enables another button on the cards and popups which will allow you to reinstall an installed application using it's default template values.  This option can be confusing at times, and is only generally used if you wish to install and have an application running twice simultaneously");?>
 
+<?tr("Show descriptions on application cards:");?>
+: <select name='descriptions' size='1'>
+	<?=mk_option($cfg['descriptions'],'no',tr("No",true))?>
+	<?=mk_option($cfg['descriptions'],'yes',tr("Yes",true))?>
+	</select>
+	
+> <?tr("This option dictates whether the descriptions appear on the cards or not")?>
+
 <?tr("Allow CA to check for updates to applications:");?>
 : <select name="updateCheck" size="1">
 	<?=mk_option($cfg['updateCheck'],"yes",tr("Yes",true))?>
