--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -1854,11 +1854,9 @@ function removeLanguage(language) {
 }
 
 function postLanguageRefresh() {
-
-	
 	var apppath = $.cookie("sidebarAppPath");
 	var appname = $.cookie("sidebarAppName");
-	if ( apppath ) {
+	if ( $.trim(apppath) ) {
 		showSidebarApp(apppath,appname);
 	}
 	refreshDisplay();
