--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -299,6 +299,10 @@ $(function(){
 		doSearch(false,repo);
 	});
 
+	$('body').on("click",".templateSearch",function() {
+		doSearch(false);
+	});
+	
 	$('body').on("click",".xmlInstall",function() {
 		var type = $(this).data("type");
 		var xml = $(this).data("xml");
